= ActiveMerchant CHANGELOG

* Sage: Add support for scrubbing [bruno]
* Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
* Openpay: Add support for verify [duff]
* Clearhaus: Fix refund of captures [duff]
* TNS: Try TLS v1 [duff]
* PaypalExpress: Add SoftDescriptor field [talyssonoc]
* MiGS: Handle IDR currency [curiousepic]
* Migs: Add support for void [mohsenottello]
* Jetpay: Support endpoint for Canada [shasum]
* Telr: Add gateway support [curiousepic]
* Moneris: Fix unit test stubs [shasum]
* Stripe: Support new network tokenization API params [methodmissing]
* Vanco: Improve handling of success determination [duff]
* PayU Latam: Add new gateway [shasum]
* Find countries if they are differently cased [curiousepic]
* CyberSource: Look up alpha2 country code [curiousepic]
* MONEI: Update supported countries list [davidgf]
* CitrusPay: Add gateway [duff]
* TNS and CitrusPay: Update to version 36 of the API [duff]
* TNS and CitrusPay: Support scrub and verify_credentials [duff]
* CardStream: Add MXN currency code [curiousepic]
* CyberSource: Combine auth_reversal with Void [curiousepic]
* SagePay: Fix truncation [duff]
* CyberSource: Use localized_amount [curiousepic]
* CyberSource, Paymill, Payflow: Add verify_credentials [duff]
* Litle: Retain amount to send in auth reversals [curiousepic]
* Migs: Support some additional fields [duff]

== Version 1.60.0 (July 4, 2016)
* Orbital: Fix CC num leak on profile calls [drewblas]
* VisaNetPeru: Add ability to refund [duff]
* AuthorizeNet: Fix store using new profile [duff]
* Clearhaus: Support private key for signature [curiousepic]
* Clearhaus: Copy private_key when stripping [curiousepic]
* CertoDirect: Remove gateway [shiroginne]
* Braintree: Extra error messaging [jordan-brough]
* AuthorizeNetCim: Set error code for AuthorizeNetCimGateway response [ka8725]
* Quickpay v10: Remove amount requirement for store [curiousepic]